<resources>
    <string name="app_name">project-pokemon</string>
    <string name="pokemon">Pokemon</string>
    <string name="start">Start!</string>
    <string name="new_game">New Game</string>
    <string name="choose_a_pokemon">Choose a Pokemon</string>
    <string name="ask_name">What is your name?</string>
    <string name="ask_nickname">Give a nickname?</string>
    <string name="trainer_name">Trainer name</string>
    <string name="missing_trainer_name">Please enter your trainer name</string>
    <string name="missing_starter_pokemon">Please select a starter Pokemon</string>
    <string name="grass_starter_pokemon">Grass starter pokemon</string>
    <string name="water_starter_pokemon">Water starter pokemon</string>
    <string name="fire_starter_pokemon">fire_starter_pokemon</string>
    <string name="contributors">Contributors:</string>
    <string name="paul">Paul Patrick Rabanal</string>
    <string name="matthew">Matthew Toledo</string>
    <string name="jeremy">Jeremy Tang</string>
    <string name="pokecenter">Pokecenter</string>
    <string name="change_team">Change Team</string>
    <string name="trainer_battle">Trainer Battle</string>
    <string name="wild_pokemon_battle">Wild Battle</string>
    <string name="save">Save</string>
    <string name="pokemon_health_placeholder">0/0</string>
    <string name="pokemon_level_placeholder">0</string>
    <string name="player_pokemon">Your Pokemon</string>
    <string name="enemy_pokemon">Opposing Pokemon</string>
    <string name="moves">Moves</string>
    <string name="move_placeholder">Move \n0/0</string>
    <string name="switch_pokemon">PKMN</string>
    <string name="items">Items</string>
    <string name="potion">Potion</string>
    <string name="pokeball">Pokeball</string>
    <string name="run">Run</string>
    <string name="throw_pokeball">Throwing pokeball.</string>
    <string name="capture_fail">Throw failed.</string>
    <string name="capture_success">has been caught!</string>
    <string name="capture_toast">You captured a Pokemon!</string>
    <string name="capture_disabled">You cannot catch another trainer\'s Pokemon.</string>
    <string name="use_potion">used potion</string>
    <string name="pp_out">Out of PP!</string>
    <string name="fainted">is fainted!</string>
    <string name="used">used</string>
    <string name="miss_move">missed their move!</string>
    <string name="level_up">leveled up!</string>
    <string name="pokemon_sprite">Pokemon sprite</string>
    <string name="continue_text">Continue</string>
    <string name="pokemon_name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="trainer_battle_run">You can\'t run from a trainer battle.</string>
</resources>