<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/pokemon_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pokemon"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@id/new_game_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/new_game_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contributors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contributors"
        app:layout_constraintTop_toBottomOf="@id/continueBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="430dp" />

    <TextView
        android:id="@+id/paul_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contributors" />

    <TextView
        android:id="@+id/matthew_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matthew"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paul_name" />

    <TextView
        android:id="@+id/jeremy_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jeremy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matthew_name" />

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_game_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>