<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intro_poke"
    tools:context=".IntroActivity">

    <RadioGroup
        android:id="@+id/starterRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/grass_starter_img"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:background="@drawable/bulbasaur_sprite"
            android:button="@null"
            android:contentDescription="@string/grass_starter_pokemon" />

        <RadioButton
            android:id="@+id/fire_starter_img"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:background="@drawable/charmander_sprite"
            android:button="@null"
            android:contentDescription="@string/water_starter_pokemon" />

        <RadioButton
            android:id="@+id/water_starter_img"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:background="@drawable/squirtle_sprite"
            android:button="@null"
            android:contentDescription="@string/fire_starter_pokemon" />
    </RadioGroup>

    <TextView
        android:id="@+id/choose_pokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_pokemon"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/starterRadioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trainer_name_input" />

    <EditText
        android:id="@+id/ask_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ask_nickname"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starterRadioGroup" />

    <EditText
        android:id="@+id/trainer_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/trainer_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/starterRadioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ask_nickname" />

    <TextView
        android:id="@+id/ask_trainer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/trainer_name_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>