<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/save_btn"
        app:layout_constraintTop_toBottomOf="@+id/wild_battle_btn"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_weight="10"
        tools:layout_editor_absoluteX="0dp">

    </FrameLayout>

    <Button
        android:id="@+id/change_team_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/change_team"
        app:layout_constraintBottom_toTopOf="@+id/wild_battle_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/pokecenter_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/trainer_battle_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/trainer_battle"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout3"
        app:layout_constraintEnd_toStartOf="@+id/wild_battle_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokecenter_btn"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/pokecenter_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/pokecenter"
        app:layout_constraintBottom_toTopOf="@+id/trainer_battle_btn"
        app:layout_constraintEnd_toStartOf="@+id/change_team_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/wild_battle_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/wild_pokemon_battle"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/trainer_battle_btn"
        app:layout_constraintTop_toBottomOf="@+id/change_team_btn"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>