<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BattleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3"
        android:paddingTop="60dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/enemy_pokemon"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_weight="0.7">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/enemy_pokemon_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pokemon"
                />

            <TextView
                android:id="@+id/enemy_pokemon_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_level_placeholder"
                />

            <TextView
                android:id="@+id/enemy_pokemon_health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_health_placeholder"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/enemy_pokemon_sprite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_foreground"
            android:contentDescription="@string/enemy_pokemon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="0dp"
        android:layout_weight="0.7">

        <ImageView
            android:id="@+id/player_pokemon_sprite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_foreground"
            android:contentDescription="@string/player_pokemon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/player_pokemon_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pokemon"
                />

            <TextView
                android:id="@+id/player_pokemon_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_level_placeholder"
                />

            <TextView
                android:id="@+id/player_pokemon_health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_health_placeholder"
                />
        </LinearLayout>
    </LinearLayout>
        <FrameLayout
            android:id="@+id/frameLayout3"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_weight="10"
            tools:layout_editor_absoluteX="0dp"
            android:layout_weight="1.6"
            android:background="@color/white">
        </FrameLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>